--- a/css/about.css
+++ b/css/about.css
@@ -207,64 +207,96 @@ a {
     .header2__top-phone {
       margin: 0 !important; } }
 
-.team {
-  padding: 60px 0; }
-  .team__text {
-    color: transparent !important;
-    -webkit-background-clip: text;
-    background-image: linear-gradient(to right, #F0145A, #EF8080);
-    font-size: 38px;
-    font-weight: 700;
-    text-align: center;
-    padding-bottom: 60px; }
-  .team__card-img1, .team__card-img2, .team__card-img3, .team__card-img4, .team__card-img5, .team__card-img6 {
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    height: 400px;
-    border-radius: 12px; }
-  .team__card-img1 {
-    background-image: url("/assets/Team-1.svg"); }
-  .team__card-img2 {
-    background-image: url("/assets/Team-2.svg"); }
-  .team__card-img3 {
-    background-image: url("/assets/Team-3.svg"); }
-  .team__card-img4 {
-    background-image: url("/assets/Team-4.svg"); }
-  .team__card-img5 {
-    background-image: url("/assets/Team-5.svg"); }
-  .team__card-img6 {
-    background-image: url("/assets/Team-6.svg"); }
-  .team__card-text-heading {
-    font-weight: 700;
-    color: #323264;
-    font-size: 16px; }
-    .team__card-text-heading:hover {
-      color: #F0145A; }
-  .team__card-text-p {
-    font-size: 14px;
-    color: #B3B3BA; }
-  .team__card-icon-a {
-    display: flex;
-    width: 32px;
-    height: 32px;
-    background-color: #B3B3BA;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    color: #24A3FF; }
-    .team__card-icon-a:hover {
-      color: #F0145A; }
-  .team .row {
-    gap: 60px;
-    justify-content: center; }
-  .team__card-wrapper {
-    padding-top: 15px; }
+.intro {
+  padding-bottom: 60px; }
+  .intro__content-text {
+    padding-right: 30px; }
+    .intro__content-text-heading {
+      font-weight: 700;
+      color: transparent;
+      -webkit-background-clip: text;
+      background-image: linear-gradient(to right, #F0145A, #EF8080);
+      font-size: 38px;
+      padding-bottom: 30px; }
+    .intro__content-text-heading2 {
+      font-weight: 700;
+      color: transparent;
+      -webkit-background-clip: text;
+      background-image: linear-gradient(to right, #F0145A, #EF8080);
+      font-size: 38px;
+      max-width: 362px; }
+    .intro__content-text-p {
+      max-width: 942px;
+      font-size: 19px; }
+  .intro__content-numbers {
+    padding-left: 30px;
+    border-left: 4px solid #E6E6F0; }
+    .intro__content-numbers-option:not(:first-child) {
+      padding-top: 30px; }
+    .intro__content-numbers-option-number {
+      font-weight: 700;
+      font-size: 36px;
+      color: transparent;
+      -webkit-background-clip: text;
+      background-image: linear-gradient(to right, #F0145A, #EF8080);
+      padding-left: 13px; }
+  .intro__mainPhoto {
+    margin: 60px 0; }
+  .intro__photo {
+    width: 100vw;
+    min-width: 100vw; }
+  .intro__content2 {
+    gap: 60px; }
 
-@media (max-width: 576px) {
-  .team .col-xs {
-    width: 100%;
-    padding: 0 30px; } }
+@media (max-width: 768px) {
+  .intro__content {
+    flex-direction: column; }
+    .intro__content-numbers {
+      margin-top: 30px; }
+  .intro__content2 {
+    flex-direction: column; } }
+
+.achievements {
+  background-color: #F5F5FA; }
+  .achievements__body {
+    gap: 40px; }
+    .achievements__body-block {
+      width: 370px;
+      background-color: #fff;
+      height: 110px;
+      min-width: 132px; }
+  .achievements__heading {
+    font-weight: 700;
+    font-size: 14px;
+    color: #323264;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 30px 0; }
+  .achievements__hidden {
+    display: none; }
+  .achievements .carousel-indicators [data-bs-target] {
+    width: 16px;
+    height: 16px;
+    background-color: #24A3FF;
+    border-radius: 50%; }
+  .achievements .carousel-indicators {
+    position: absolute;
+    top: 130px;
+    gap: 12px; }
+  .achievements #carouselExampleIndicators {
+    border-bottom: 2px solid #E6E6F0;
+    padding-bottom: 70px; }
+  .achievements .carousel-control-prev, .achievements .carousel-control-next {
+    display: none; }
+
+@media (max-width: 992px) {
+  .achievements__body-block:not(:first-child) img {
+    width: 100%; } }
+@media (max-width: 375px) {
+  .achievements__hidden {
+    display: block; }
+  .achievements__body-block:not(:first-child) {
+    display: none !important; } }
 
 .footer {
   background-color: #F5F5FA;
@@ -356,4 +388,4 @@ a {
       display: flex;
       justify-content: center; } }
 
-/*# sourceMappingURL=team.css.map */
+/*# sourceMappingURL=about.css.map */
